adding pasta and steak pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/cupcakes.html"rel="noopener noreferrer">Cupcakes</a>
-    
+    <a href="recipes/pasta.html" rel="noopener noreferrer">Pasta</a>  
 </body>
 </html>
