all pages plus pictures added

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -6,6 +6,81 @@
     <title>Steak | Recipes Website</title>
 </head>
 <body>
+    <h1><em>Salisbury Steak</em></h1>
+    <img src="../images/steak.jpg" alt="steakPic" width="200" height="160">
+    <p>
+        <strong><em>Comfortable and Delicious</em></strong> dish of Tender Beef and Homemade Gravy! 
+        Home Cooked Steak that produces rich, satisfying flavour. 
+    </p>
+    <p><strong>Bring Back the Memories of TV Dinners!</strong></p>
     
+    <h2>Ingredients</h2>
+    <h3>Steaks: </h3>
+    <ul>
+        <li> 1 pound, 85% Lean Ground Beef</li>
+        <li>1/2 Cup Plain Bread Crumbs</li>
+        <li>1 Large Egg, Beaten</li>
+        <li>2 Tablespoons Ketchup</li>
+        <li>1 Tablespoon Worcestershire Sauce</li>
+        <li>1 Teaspoon Dry Mustard</li>
+        <li>1 Teaspoon Soy Sauce</li>
+        <li>1/2 Teaspoon Freshly Ground Black Pepper</li>
+        <li>1 Pinch Cayenne Pepper, or to Taste</li>
+        <li>2 Tablespoons Salted Butter</li>
+    </ul>
+    <h3>Gravy: </h3>
+    <ul>
+        <li>2 Tablespoons Salted Butter</li>
+        <li>12 Large White Button Mushrooms, Sliced</li>
+        <li>1 Cup Diced Onion</li>
+        <li>Salt to Taste</li>
+        <li>2 Tablespoons All-Purpose Flour</li>
+        <li>3 Cups High Quality, Low-Sodium Beef Broth</li>
+        <li>2 Tablespoons Ketchup</li>
+        <li>1 Tablespoon Worcestershire</li>
+    </ul>
+    <h2>Steps (VIA ALLRECIPES)</h2>
+    <ol>
+        <!-- Step 1 -->
+        <li>
+            Prepare the steaks: Mix ground beef, bread crumbs, egg, ketchup, Worcestershire sauce, 
+            mustard, soy sauce, pepper, and cayenne together in a mixing bowl with a fork or your hands 
+            until well combined. Cover with plastic wrap and refrigerate for at least 2 hours or overnight.
+        </li>
+        <!-- Step 2 -->
+        <li>
+            When almost ready to cook the steaks, make the gravy: 
+            Melt butter in a large nonstick skillet over high heat. 
+            Add mushrooms, onion, and salt; sauté until nicely browned, 5 to 8 minutes. 
+            Reduce the heat to medium and add flour; cook and stir for 3 minutes.
+        </li>
+        <!-- Step 3 -->
+        <li>
+            Stir in broth, ketchup, and Worcestershire sauce. 
+            Increase the heat to high and bring to a simmer. 
+            Reduce the heat to medium and cook, stirring occasionally, 
+            until gravy thickens slightly and reduces, about 10 minutes. 
+            Taste and adjust salt as needed.
+        </li>
+        <!-- Step 4 -->
+        <li>Transfer gravy to a liquid measure. Scrape the pan clean with a spatula.</li>
+        <!-- Step 5 -->
+         <li>
+            Finish the steaks: Remove meat from the refrigerator and divide into four equal portions. 
+            Moisten hands and form each portion into a 1/2-inch-thick oval patty. 
+            Lightly season both sides of patties with salt.
+         </li>
+         <!-- Step 6 -->
+        <li>
+            Melt butter in the clean skillet over medium-high heat. 
+            Add patties and cook until browned, 2 to 3 minutes per side. 
+            Pour in gravy and bring to a simmer. 
+            Reduce the heat to medium and continue to cook until gravy is 
+            piping hot and steaks are no longer pink in the center, about 5 more minutes. 
+            An instant-read thermometer inserted into the center should read at least 
+            160 degrees F (70 degrees C).
+        </li>
+    </ol>
+    <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
