--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Recipes Website</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/cupcakes.html"rel="noopener noreferrer">Cupcakes</a>
+    <h1><em>Odin Recipes</h1></em>
+    <ul>
+    <li>
+        <a href="recipes/cupcakes.html"rel="noopener noreferrer">Cupcakes</a>
+    </li>
+    <li>
     <a href="recipes/pasta.html" rel="noopener noreferrer">Pasta</a>  
+    </li>
+    <li>
+    <a href="recipes/steak.html" rel="noopener noreferrer">Steak</a>
+    </li>
+    </ul>
 </body>
 </html>
