css main page up to do

--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Recipes Website</title>
 </head>
 <body>
-    <h1><em>Odin Recipes</h1></em>
+    <h1 id="title" class="main"><em>Odin Recipes</h1></em>
     <ul>
-    <li>
-        <a href="recipes/cupcakes.html"rel="noopener noreferrer">Cupcakes</a>
-    </li>
-    <li>
-    <a href="recipes/pasta.html" rel="noopener noreferrer">Pasta</a>  
-    </li>
-    <li>
-    <a href="recipes/steak.html" rel="noopener noreferrer">Steak</a>
-    </li>
+    <li class="home" id="cupcakes"> <a  href="recipes/cupcakes.html"rel="noopener noreferrer">Cupcakes</a> </li>
+    <img class="pic" src="./images/frogCupcakes.jpg" alt="frog Cupcake">
+    <li class="home" id="pasta"> <a  href="recipes/pasta.html" rel="noopener noreferrer">Pasta</a> </li>
+    <img class="pic" src="./images/pasta.jpg" alt="pastaPic">
+    <li class="home" id="steak"> <a  href="recipes/steak.html" rel="noopener noreferrer">Steak</a> </li>
+    <img class= "pic" id="s-pic" src="./images/steak.jpg" alt="steakPic">
     </ul>
+
+<footer>
+    <!-- <p class="credit">Created by Alex</p> -->
+</footer>
 </body>
 </html>
