--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Cupcake Recipe | Recipes Website</title>
 </head>
 <body>
-    <h1><em>Cupcake Recipe</em></h1>
+    <h1 id="title"><em>Cupcake Recipe</em></h1>
     <img src="../images/frogCupcakes.jpg" alt="frog Cupcake" width="150" height="150">
     
     <p>
